# cmake

./: CMakeLists.txt  README.md
build-settings/: compile_settings_global.cmake  custom_rules.cmake
executable/main/: CMakeLists.txt
include/: CMakeLists.txt  Foo.h  foo.h
include/compiler/: CMakeLists.txt
mlayout/: CMakeLists.txt
mlayout/main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Foo.cpp  foo.c
test/: CMakeLists.txt
